--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "numpy>=2.3.4",
     "openpyxl>=3.1.5",
     "plotly>=6.4.0",
+    "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "streamlit>=1.51.0",
 ]
