--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "streamlit>=1.51.0",
+    "xlsxwriter>=3.1.9",
+    "streamlit-aggrid>=0.3.4",
 ]
